--- a/index.html
+++ b/index.html
@@ -105,49 +105,9 @@
                 min-height: auto; /* Adjust for smaller screens */
             }
         }
-
-        /* New styling for the "Fan Question of the Night" section */
-        .fan-question {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #FFC107;
-            color: black;
-            border-radius: 5px;
-        }
-
-        .fan-question textarea {
-            width: 90%;
-            margin: 5px 0;
-            padding: 8px;
-            font-size: 3.5vw;
-            background-color: #000000;
-            color: white;
-            border: 1px solid #FFC107;
-            resize: none; /* Prevent resizing */
-            box-sizing: border-box;
-        }
-
-        .fan-name, .fan-hometown {
-            width: 90%;
-            padding: 8px;
-            font-size: 3.5vw;
-            background-color: #000000;
-            color: white;
-            border: 1px solid #FFC107;
-            resize: none;
-            box-sizing: border-box;
-        }
     </style>
 </head>
 <body onload="loadFormData()">
-
-    <!-- Fan Question of the Night Section -->
-    <div class="fan-question">
-        <div class="header">Fan Question of the Night</div>
-        <textarea id="fanQuestion" rows="3" placeholder="Enter your question here..." oninput="saveFormData()"></textarea>
-        <textarea id="fanName" class="fan-name" rows="2" placeholder="Enter your name..." oninput="saveFormData()"></textarea>
-        <textarea id="fanHometown" class="fan-hometown" rows="2" placeholder="Enter your hometown..." oninput="saveFormData()"></textarea>
-    </div>
 
     <!-- Redraw Wheel Order Header -->
     <div class="header">REDRAW WHEEL ORDER</div>
@@ -163,167 +123,183 @@
                 </tr>
             </thead>
             <tbody id="drivers">
-                <!-- Added 8 rows for 8 drivers -->
                 <tr>
                     <td><input type="text" placeholder="Driver 1" id="driver1" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time1" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin1" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin1" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
                 <tr>
                     <td><input type="text" placeholder="Driver 2" id="driver2" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time2" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin2" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin2" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
                 <tr>
                     <td><input type="text" placeholder="Driver 3" id="driver3" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time3" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin3" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin3" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
                 <tr>
                     <td><input type="text" placeholder="Driver 4" id="driver4" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time4" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin4" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin4" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
                 <tr>
                     <td><input type="text" placeholder="Driver 5" id="driver5" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time5" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin5" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin5" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
                 <tr>
                     <td><input type="text" placeholder="Driver 6" id="driver6" oninput="saveFormData(); updateGrid()"></td>
                     <td><input type="text" placeholder="00.000" id="time6" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin6" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
-                </tr>
-                <tr>
-                    <td><input type="text" placeholder="Driver 7" id="driver7" oninput="saveFormData(); updateGrid()"></td>
-                    <td><input type="text" placeholder="00.000" id="time7" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin7" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
-                </tr>
-                <tr>
-                    <td><input type="text" placeholder="Driver 8" id="driver8" oninput="saveFormData(); updateGrid()"></td>
-                    <td><input type="text" placeholder="00.000" id="time8" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" id="spin8" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
+                    <td><input type="text" min="0" max="36" id="spin6" oninput="restrictSpin(this); saveFormData(); updateGrid()"></td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <button onclick="resetForm()">Reset</button>
+    <div class="header">Starting Order</div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Row</th>
+                <th>Inside</th>
+                <th>Outside</th>
+            </tr>
+        </thead>
+        <tbody id="startingOrder">
+            <!-- JavaScript will populate this -->
+        </tbody>
+    </table>
 
     <script>
-        // Save form data in localStorage
+        // Format the Qualifying Time input to enforce 00.000 format
+        function formatTime(input) {
+            let value = input.value.replace(/[^0-9]/g, ''); // Remove non-numeric characters
+            if (value.length > 5) {
+                value = value.substring(0, 5); // Limit to 5 digits (e.g., 12345 -> 12.345)
+            }
+            if (value.length > 2) {
+                // Insert period between the second and third digits
+                value = value.substring(0, 2) + '.' + value.substring(2);
+            }
+            input.value = value;
+        }
+
+        // Restrict Spin Number input to 00, 0-36
+        function restrictSpin(input) {
+            let value = input.value;
+            // Remove non-numeric characters
+            value = value.replace(/[^0-9]/g, '');
+            // Allow "00" explicitly
+            if (value === "00") {
+                input.value = "00";
+                return;
+            }
+            // Convert to number for range check
+            let num = parseInt(value, 10);
+            if (value === "" || (num >= 0 && num <= 36)) {
+                input.value = value;
+            } else {
+                input.value = value.substring(0, value.length - 1); // Remove last character if invalid
+            }
+        }
+
+        // Save form data to localStorage
         function saveFormData() {
-            const data = {
-                fanQuestion: document.getElementById('fanQuestion').value,
-                fanName: document.getElementById('fanName').value,
-                fanHometown: document.getElementById('fanHometown').value,
-                driver1: document.getElementById('driver1').value,
-                driver2: document.getElementById('driver2').value,
-                driver3: document.getElementById('driver3').value,
-                driver4: document.getElementById('driver4').value,
-                driver5: document.getElementById('driver5').value,
-                driver6: document.getElementById('driver6').value,
-                driver7: document.getElementById('driver7').value,
-                driver8: document.getElementById('driver8').value,
-                time1: document.getElementById('time1').value,
-                time2: document.getElementById('time2').value,
-                time3: document.getElementById('time3').value,
-                time4: document.getElementById('time4').value,
-                time5: document.getElementById('time5').value,
-                time6: document.getElementById('time6').value,
-                time7: document.getElementById('time7').value,
-                time8: document.getElementById('time8').value,
-                spin1: document.getElementById('spin1').value,
-                spin2: document.getElementById('spin2').value,
-                spin3: document.getElementById('spin3').value,
-                spin4: document.getElementById('spin4').value,
-                spin5: document.getElementById('spin5').value,
-                spin6: document.getElementById('spin6').value,
-                spin7: document.getElementById('spin7').value,
-                spin8: document.getElementById('spin8').value,
-            };
-            localStorage.setItem('formData', JSON.stringify(data));
+            for (let i = 1; i <= 6; i++) {
+                let driver = document.getElementById(`driver${i}`).value;
+                let time = document.getElementById(`time${i}`).value;
+                let spin = document.getElementById(`spin${i}`).value;
+                localStorage.setItem(`driver${i}`, driver);
+                localStorage.setItem(`time${i}`, time);
+                localStorage.setItem(`spin${i}`, spin);
+            }
         }
 
         // Load form data from localStorage
         function loadFormData() {
-            const savedData = JSON.parse(localStorage.getItem('formData'));
-            if (savedData) {
-                document.getElementById('fanQuestion').value = savedData.fanQuestion || '';
-                document.getElementById('fanName').value = savedData.fanName || '';
-                document.getElementById('fanHometown').value = savedData.fanHometown || '';
-                document.getElementById('driver1').value = savedData.driver1 || '';
-                document.getElementById('driver2').value = savedData.driver2 || '';
-                document.getElementById('driver3').value = savedData.driver3 || '';
-                document.getElementById('driver4').value = savedData.driver4 || '';
-                document.getElementById('driver5').value = savedData.driver5 || '';
-                document.getElementById('driver6').value = savedData.driver6 || '';
-                document.getElementById('driver7').value = savedData.driver7 || '';
-                document.getElementById('driver8').value = savedData.driver8 || '';
-                document.getElementById('time1').value = savedData.time1 || '';
-                document.getElementById('time2').value = savedData.time2 || '';
-                document.getElementById('time3').value = savedData.time3 || '';
-                document.getElementById('time4').value = savedData.time4 || '';
-                document.getElementById('time5').value = savedData.time5 || '';
-                document.getElementById('time6').value = savedData.time6 || '';
-                document.getElementById('time7').value = savedData.time7 || '';
-                document.getElementById('time8').value = savedData.time8 || '';
-                document.getElementById('spin1').value = savedData.spin1 || '';
-                document.getElementById('spin2').value = savedData.spin2 || '';
-                document.getElementById('spin3').value = savedData.spin3 || '';
-                document.getElementById('spin4').value = savedData.spin4 || '';
-                document.getElementById('spin5').value = savedData.spin5 || '';
-                document.getElementById('spin6').value = savedData.spin6 || '';
-                document.getElementById('spin7').value = savedData.spin7 || '';
-                document.getElementById('spin8').value = savedData.spin8 || '';
-                updateGrid(); // Update grid after loading data
+            for (let i = 1; i <= 6; i++) {
+                let driver = localStorage.getItem(`driver${i}`);
+                let time = localStorage.getItem(`time${i}`);
+                let spin = localStorage.getItem(`spin${i}`);
+                if (driver) document.getElementById(`driver${i}`).value = driver;
+                if (time) document.getElementById(`time${i}`).value = time;
+                if (spin) document.getElementById(`spin${i}`).value = spin;
             }
+            updateGrid(); // Update the grid after loading data
         }
 
-        // Update the starting order table
         function updateGrid() {
-            const drivers = [];
-            for (let i = 1; i <= 8; i++) {
-                const driver = document.getElementById(`driver${i}`).value;
-                const time = document.getElementById(`time${i}`).value;
-                const spin = document.getElementById(`spin${i}`).value;
-                if (driver && time && spin) {
-                    drivers.push({ driver, time, spin });
+            let drivers = [];
+
+            // Collect driver data from the input fields
+            for (let i = 1; i <= 6; i++) {
+                let name = document.getElementById(`driver${i}`).value.trim();
+                let spinInput = document.getElementById(`spin${i}`).value.trim();
+                let timeInput = document.getElementById(`time${i}`).value.trim();
+
+                let spin = parseInt(spinInput, 10);
+                let time = parseFloat(timeInput);
+
+                // Only include drivers with valid name, spin, and time
+                if (name && !isNaN(spin) && !isNaN(time) && spinInput !== "" && timeInput !== "") {
+                    // Treat 00 as the lowest (-2), 0 as the second-lowest (-1)
+                    if (spinInput === "00") {
+                        spin = -2; // 00 is the lowest
+                    } else if (spin === 0) {
+                        spin = -1; // 0 is the second-lowest
+                    }
+                    drivers.push({ name, spin, time, originalSpin: spinInput }); // Store original spin for display
                 }
             }
-            // Sort by spin number
-            drivers.sort((a, b) => a.spin - b.spin);
-            // Populate the table
-            const tableBody = document.getElementById("startingOrder");
-            tableBody.innerHTML = '';
-            drivers.forEach((driver, index) => {
-                const row = document.createElement("tr");
-                const rowNumber = document.createElement("td");
-                rowNumber.textContent = index + 1; // Row number
-                row.appendChild(rowNumber);
 
-                const driverName = document.createElement("td");
-                driverName.textContent = driver.driver;
-                row.appendChild(driverName);
+            // Sort by spin first (lowest to highest), then qualifying time (fastest to slowest)
+            drivers.sort((a, b) => a.spin - b.spin || a.time - b.time);
 
-                const driverTime = document.createElement("td");
-                driverTime.textContent = driver.time;
-                row.appendChild(driverTime);
+            let startingOrderHTML = "";
+            let row = 1;
 
-                const driverSpin = document.createElement("td");
-                driverSpin.textContent = driver.spin;
-                row.appendChild(driverSpin);
+            // Pair drivers into Inside/Outside for each row
+            for (let i = 0; i < drivers.length; i += 2) {
+                let insideDriver = drivers[i];
+                let outsideDriver = drivers[i + 1];
 
-                tableBody.appendChild(row);
-            });
-        }
+                // Format the Inside driver
+                let insideDisplaySpin = insideDriver.originalSpin;
+                let insideDisplayTime = insideDriver.time.toFixed(3).padStart(6, "0");
+                let insideText = `${insideDriver.name} (#${insideDisplaySpin}, ${insideDisplayTime}s)`;
 
-        // Reset form data and table
-        function resetForm() {
-            localStorage.removeItem('formData'); // Remove saved data
-            loadFormData(); // Reload empty data
-            document.getElementById('startingOrder').innerHTML = ''; // Clear table
+                // Format the Outside driver (if exists)
+                let outsideText = "";
+                let tieClass = "";
+
+                if (outsideDriver) {
+                    let outsideDisplaySpin = outsideDriver.originalSpin;
+                    let outsideDisplayTime = outsideDriver.time.toFixed(3).padStart(6, "0");
+                    outsideText = `${outsideDriver.name} (#${outsideDisplaySpin}, ${outsideDisplayTime}s)`;
+
+                    // Check for a tie within the same row (Inside and Outside have the same spin AND time)
+                    if (insideDriver.spin === outsideDriver.spin && insideDriver.time === outsideDriver.time) {
+                        tieClass = "highlight";
+                    }
+                }
+
+                // Check for a tie with the Inside driver of the next row (if applicable)
+                let nextInsideDriver = drivers[i + 2]; // The Inside driver of the next row
+                if (nextInsideDriver && outsideDriver && outsideDriver.spin === nextInsideDriver.spin && outsideDriver.time === nextInsideDriver.time) {
+                    tieClass = "highlight";
+                }
+
+                // Add the row to the table
+                startingOrderHTML += `<tr class="${tieClass}"><td>${row}</td><td>${insideText}</td><td>${outsideText}</td></tr>`;
+                row++;
+            }
+
+            // Update the Starting Order table
+            document.getElementById("startingOrder").innerHTML = startingOrderHTML;
         }
     </script>
+
 </body>
 </html>
